# INTEL-IA-LLMV1

./: .gitignore  Modelfile  README.md  main.py  pyproject.toml  requirements.txt
config/: config.json  key.json  keys.example.json  keys.json  license_public_key.pem  limits.json  models.json  prompts.json
scripts/: dev.sh  generate_license_key.py  setup.sh  update.sh
src/: Modelfile  README.md  __init__.py  __main__.py  _entry.py  main.py
src/api/: error_handler.py  ollama_client.py  request_builder.py
src/checker/: cpu_checker.py  disk_checker.py  network_checker.py  ram_checker.py  system_check.py  system_checker.py
src/config/: config.json  keys.json  limits.json  models.json  prompts.json
src/core/: __init__.py  config_loader.py  engine.py  updater.py
src/managers/: cache_manager.py  history_manager.py  key_manager.py  logger.py  memory_manager.py  quota_manager.py  session_manager.py
src/scripts/: setup.sh  start.sh
src/utils/: colors.py  formatter.py  helpers.py
tests/: test_config_loader.py
